add log tracing in client and request handler. (#438)
* Add trace id in log


* Add operatrion header into openapi


---------
