# pkg/api/openapi/model_consumer_list.go
@@ -11,7 +11,9 @@ API version: 0.0.1
 package openapi
 
 import (
+	"bytes"
 	"encoding/json"
+	"fmt"
 )
 
 // checks if the ConsumerList type satisfies the MappedNullable interface at compile time
@@ -25,6 +27,8 @@ type ConsumerList struct {
 	Total int32      `json:"total"`
 	Items []Consumer `json:"items"`
 }
+
+type _ConsumerList ConsumerList
 
 // NewConsumerList instantiates a new ConsumerList object
 // This constructor will assign default values to properties that have it defined,
@@ -184,6 +188,47 @@ func (o ConsumerList) ToMap() (map[string]interface{}, error) {
 	toSerialize["total"] = o.Total
 	toSerialize["items"] = o.Items
 	return toSerialize, nil
+}
+
+func (o *ConsumerList) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"kind",
+		"page",
+		"size",
+		"total",
+		"items",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err
+	}
+
+	for _, requiredProperty := range requiredProperties {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varConsumerList := _ConsumerList{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varConsumerList)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ConsumerList(varConsumerList)
+
+	return err
 }
 
 type NullableConsumerList struct {
